kubernetes/porfolio-cloudflare.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: porfolio
  namespace: default
  labels:
    app: porfolio
    version: v
    environment: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: porfolio
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: porfolio
        version: v
        environment: production
    spec:
      imagePullSecrets:
        - name: docker-registry-secret
      containers:
        - name: porfolio
          image: davtechw/porfolio:v3 #Modificar version
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
              name: http
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 2001
            runAsGroup: 2001
            runAsNonRoot: true
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /
              port: 3000
              httpHeaders:
                - name: User-Agent
                  value: kube-probe/1.0
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
              httpHeaders:
                - name: User-Agent
                  value: kube-probe/1.0
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: porfolio-service
  namespace: default
  labels:
    app: porfolio
    environment: production
  annotations:
    # Anotaciones para Cloudflare Zero Trust
    cloudflare.com/zero-trust: 'true'
    cloudflare.com/proxy-mode: 'http'
spec:
  type: NodePort # NodePort para acceso directo
  selector:
    app: porfolio
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30001
      name: http
